[gd_scene load_steps=6 format=3 uid="uid://br8g7w38jguh4"]

[ext_resource type="FontFile" uid="uid://dtb4wkus51hxs" path="res://visual/fonts/FontMono.ttf" id="1_p8s8y"]
[ext_resource type="Script" path="res://src/ui_elements/flag_field.gd" id="2_0bhg4"]

[sub_resource type="FontVariation" id="FontVariation_46ud6"]
base_font = ExtResource("1_p8s8y")
spacing_top = -1
spacing_bottom = -1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oo47u"]
content_margin_left = 5.0
content_margin_top = 0.0
content_margin_right = 5.0
content_margin_bottom = 0.0
bg_color = Color(0.4, 0.121569, 0.121569, 1)
border_width_bottom = 2
border_color = Color(0.85098, 0.168627, 0.168627, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uepoa"]
content_margin_left = 5.0
content_margin_top = 0.0
content_margin_right = 5.0
content_margin_bottom = 0.0
bg_color = Color(0.12, 0.4, 0.12, 1)
border_width_bottom = 2
border_color = Color(0.466667, 0.85098, 0.0862745, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3

[node name="FlagField" type="Button"]
custom_minimum_size = Vector2(0, 18)
offset_right = 19.0
offset_bottom = 18.0
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 0.75, 0.75, 1)
theme_override_colors/font_pressed_color = Color(0.74902, 1, 0.74902, 1)
theme_override_fonts/font = SubResource("FontVariation_46ud6")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_oo47u")
theme_override_styles/hover = SubResource("StyleBoxFlat_oo47u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uepoa")
toggle_mode = true
text = "0"
script = ExtResource("2_0bhg4")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="toggled" from="." to="." method="_on_toggled"]
